# Travel-Guide-AI-Agent

./: .env  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
db/: database.py  insert_destinations.py  insert_travel_package.py  schema.sql
rag/: database.py  embeddings.py  llm.py  pipeline.py  query_logger.py  query_parser.py  recommendation_engine.py  retriever.py  vector_store.py
scrapers/: bonfire_safaris.py  magical_kenya.py
